v2 (#81)
* Bunch of optimizations
* Better data model
* Cache is now a valkey instance, update publishing via nats
* more cleanups, dependency updates, new/fixed/improved data
* ... probably more I forgot